--- a/绘制一个时钟.html
+++ b/绘制一个时钟.html
@@ -18,53 +18,109 @@
     <script>
         let myCanvas = document.querySelector('canvas');
         let ctx = myCanvas.getContext('2d');
-        ctx.save();
-        // 移动坐标至圆心
-        ctx.translate(myCanvas.width / 2, myCanvas.height / 2);
-        // 绘制一个圆
-        ctx.arc(0, 0, 230, 0, 2 * Math.PI, false);
-        ctx.lineWidth = 4;
-        ctx.strokeStyle = '#00b5e5'
-        ctx.stroke();
 
-        //刻画小时
-        ctx.save();
-        for (let i = 0; i < 12; i++) {
-            ctx.rotate(30 / 180 * Math.PI);
-            ctx.beginPath();
-            //绘制刻度
-            ctx.moveTo(200, 0);
-            ctx.lineTo(220, 0);
-            ctx.lineWidth = 6;
-            ctx.strokeStyle = '#000';
-            ctx.lineCap = 'round';
-            ctx.stroke();
+        setInterval(draw, 1000)
+      function draw(){
+            ctx.clearRect(0, 0, 600, 600)
+            ctx.save();
+                // 移动坐标至中心
+                ctx.translate(myCanvas.width / 2, myCanvas.height / 2);
+                ctx.rotate(-90 / 180 * Math.PI);
+                // 绘制一个圆
+                ctx.beginPath();
+                ctx.arc(0, 0, 230, 0, 2 * Math.PI, false);
+                ctx.lineWidth = 4;
+                ctx.strokeStyle = '#00b5e5'
+                ctx.stroke();
+
+                //刻画小时
+                ctx.save();
+                    for (let i = 0; i < 12; i++) {
+                        ctx.rotate(30 / 180 * Math.PI);
+                        ctx.beginPath();
+                        //绘制刻度
+                        ctx.moveTo(200, 0);
+                        ctx.lineTo(220, 0);
+                        ctx.lineWidth = 6;
+                        ctx.strokeStyle = '#000';
+                        ctx.lineCap = 'round';
+                        ctx.stroke();
+                    }
+                ctx.restore();
+
+                // 刻画分钟
+                ctx.save();
+                    for (let i = 0; i < 60; i++) {
+                        ctx.rotate(6 / 180 * Math.PI);
+                        ctx.beginPath();
+                        //绘制刻度
+                        ctx.moveTo(210, 0);
+                        ctx.lineTo(220, 0);
+                        ctx.lineWidth = 2;
+                        ctx.strokeStyle = '#000';
+                        ctx.lineCap = 'round';
+                        ctx.stroke();
+                    }
+                ctx.restore();
+                
+                // 绘制时针分针秒针
+                //首先获取时间
+                let date = new Date();
+                let second = date.getSeconds();
+                let minute = date.getMinutes() + second / 60;
+                let hour = date.getHours() + minute / 60;
+
+                //绘制时针
+                ctx.save();
+                    ctx.beginPath();
+                    ctx.rotate(hour * 30 / 180 * Math.PI);
+                    ctx.moveTo(-20, 0);
+                    ctx.lineTo(150, 0);
+                    ctx.strokeStyle = '#000';
+                    ctx.lineWidth = 8;
+                    ctx.stroke();
+                ctx.restore();
+
+                //绘制分针
+                ctx.save();
+                    ctx.beginPath();
+                    ctx.rotate(minute * 6 / 180 * Math.PI);
+                    ctx.moveTo(-20, 0);
+                    ctx.lineTo(180, 0);
+                    ctx.lineWidth = 6;
+                    ctx.strokeStyle = '#000';
+                    ctx.stroke();
+                ctx.restore();
+
+                //绘制秒针
+                ctx.save();
+                    ctx.rotate(second * 6 / 180 * Math.PI);
+                    ctx.beginPath();
+                    ctx.moveTo(-20, 0);
+                    ctx.lineTo(180, 0);
+                    ctx.lineWidth = 3;
+                    ctx.strokeStyle = "red";
+                    ctx.stroke();
+
+                    ctx.beginPath();
+                    ctx.arc(0,0,8,0,Math.PI*2);
+                    ctx.fillStyle = 'red';
+                    ctx.fill();
+
+                    //绘制箭头
+                    ctx.beginPath();
+                    ctx.moveTo(180, 0);
+                    ctx.lineTo(170, -5);
+                    ctx.lineTo(170, 5);
+                    ctx.fillStyle = 'red';
+                    ctx.fill();
+                    ctx.closePath();
+                    ctx.stroke();
+                ctx.restore();
+
+                
+            ctx.restore();
         }
-        ctx.restore();
-
-        // 刻画分钟
-        for (let i = 0; i < 60; i++) {
-            ctx.rotate(6 / 180 * Math.PI);
-            ctx.beginPath();
-            //绘制刻度
-            ctx.moveTo(210, 0);
-            ctx.lineTo(220, 0);
-            ctx.lineWidth = 2;
-            ctx.strokeStyle = '#000';
-            ctx.lineCap = 'round';
-            ctx.stroke();
-        }
-
-        // 绘制时针分针秒针
-        //首先获取时间
-        let date = new Date();
-        let second = date.getSeconds();
-        let minute = date.getMinutes() + second / 60;
-        let hour = date.getHours() + minute / 60;
-
-        console.log(second,minute,hour);
-
-        ctx.restore();
     </script>
 
 
