绘制图片，线性渐变

--- a/签名版.html
+++ b/签名版.html
@@ -43,7 +43,8 @@
 
         document.addEventListener('mouseup', (e) => {
 
-            document.removeEventListener('mousemove', draw)
+            document.removeEventListener('mousemove', draw);
+
         })
     </script>
 </body>
