--- a/线性渐变.html
+++ b/线性渐变.html
@@ -25,6 +25,7 @@
         linear.addColorStop(0.5,'yellow');
         linear.addColorStop(1,'green');
         
+        //绘制线条
         ctx.moveTo(100,100);
         ctx.lineTo(400,100);
         ctx.lineWidth = 50;
