--- a/绘制一个圆弧.html
+++ b/绘制一个圆弧.html
@@ -20,7 +20,7 @@
         let myCanvas = document.querySelector('canvas');
 
         let ctx = myCanvas.getContext('2d');
-        // Math.PI是半圆
+        // Math.PI是半圆  *2就是一个圆形
         ctx.arc(300, 200, 100, 0, 360 / 360 * Math.PI, false);
         ctx.stroke();
     </script>
