键盘弹起事件

--- a/canvas.html
+++ b/canvas.html
@@ -12,7 +12,8 @@
     </style>
 </head>
 
-<body>
+<body>  
+    <a href="./edit.html">进入链接</a>
     <canvas width="600" height="400"></canvas>
     <script>
         let myCanvas = document.querySelector('canvas');
